--- a/mail-template/verification.html
+++ b/mail-template/verification.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
   xmlns="http://www.w3.org/1999/xhtml"
   xmlns:v="urn:schemas-microsoft-com:vml"
   xmlns:o="urn:schemas-microsoft-com:office:office"
-  lang="en"
+  lang="ru"
 >
   <head>
     <title></title>
@@ -308,7 +307,7 @@
                                                   href="https://ellcakes.ru"
                                                   style="font-size: 0px"
                                                   target="_blank"
-                                                  >
+                                                >
                                                   <img
                                                     class="t0"
                                                     style="
@@ -323,8 +322,8 @@
                                                     height="90px"
                                                     alt=""
                                                     src="https://storage.yandexcloud.net/ell-cake-image-prod/logo.png"
-                                                />
-                                              </a>
+                                                  />
+                                                </a>
                                               </td>
                                             </tr>
                                           </table>
@@ -477,7 +476,8 @@
                                                     mso-text-raise: 2px;
                                                   "
                                                 >
-                                                   Здравствуйте! Ваш код для верификации аккаунта
+                                                  Здравствуйте! Ваш код для
+                                                  верификации аккаунта
                                                 </p>
                                               </td>
                                             </tr>
@@ -563,9 +563,9 @@
                                                     mso-line-height-rule: exactly;
                                                     mso-text-raise: 8px;
                                                   "
-
-                                                  >{{ TOKEN }}</h3
                                                 >
+                                                  {{ TOKEN }}
+                                                </h3>
                                               </td>
                                             </tr>
                                           </table>
@@ -641,7 +641,9 @@
                                                     mso-text-raise: 2px;
                                                   "
                                                 >
-                                                  Если вы не запрашивали код, просто проигнорируйте это письмо.
+                                                  Если вы не запрашивали код,
+                                                  просто проигнорируйте это
+                                                  письмо.
                                                 </p>
                                               </td>
                                             </tr>
