--- a/mail-template/order.html
+++ b/mail-template/order.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
   xmlns="http://www.w3.org/1999/xhtml"
   xmlns:v="urn:schemas-microsoft-com:vml"
   xmlns:o="urn:schemas-microsoft-com:office:office"
-  lang="en"
+  lang="ru"
 >
   <head>
     <title></title>
@@ -308,7 +307,7 @@
                                                   href="https://ellcakes.ru"
                                                   style="font-size: 0px"
                                                   target="_blank"
-                                                  >
+                                                >
                                                   <img
                                                     class="t0"
                                                     style="
@@ -323,8 +322,8 @@
                                                     height="90px"
                                                     alt=""
                                                     src="https://storage.yandexcloud.net/ell-cake-image-prod/logo.png"
-                                                />
-                                              </a>
+                                                  />
+                                                </a>
                                               </td>
                                             </tr>
                                           </table>
@@ -477,7 +476,10 @@
                                                     mso-text-raise: 2px;
                                                   "
                                                 >
-                                                    Здравствуйте! Мы приняли ваш заказ. Статус заказа и детали вы сможете посмотреть в личном кабинете.
+                                                  Здравствуйте! Мы приняли ваш
+                                                  заказ. Статус заказа и детали
+                                                  вы сможете посмотреть в личном
+                                                  кабинете.
                                                 </p>
                                               </td>
                                             </tr>
@@ -536,7 +538,6 @@
                                                   overflow: hidden;
                                                   text-align: center;
                                                   line-height: 24px;
-                                
                                                 "
                                               >
                                                 <h3
@@ -561,10 +562,9 @@
                                                     mso-line-height-rule: exactly;
                                                     mso-text-raise: 8px;
                                                   "
-                                                  >
-                                                  {{ ORDER_NUMBER }}
-                                                  </h3
                                                 >
+                                                  {{ ORDER_NUMBER }}
+                                                </h3>
                                               </td>
                                             </tr>
                                           </table>
